--- a/criu/Makefile.crtools
+++ b/criu/Makefile.crtools
@@ -94,4 +94,4 @@ protobuf-desc-gen.h: $(PROTOBUF_GEN) include/protobuf-desc.h
 	$(call msg-gen, $@)
 	$(Q) $(SH) $(PROTOBUF_GEN) > $@
 
-cleanup-y += protobuf-desc-gen.h
+mrproper-y += protobuf-desc-gen.h
