zdtm: Add aio01 test
Description:

1)Create io context, submit several io operations and
get events of some of them.

2)Sleep on signal.

3)Check tail, head and nr events restored correct.

4)Emit one more io operation.

5)Check tail has moved one number forward (i.e. synchronize
in-kernel and userspace tails if they were different).

Signed-off-by: Kirill Tkhai <ktkhai@virtuozzo.com>
Signed-off-by: Pavel Emelyanov <xemul@virtuozzo.com>

--- a/test/zdtm/static/Makefile
+++ b/test/zdtm/static/Makefile
@@ -135,6 +135,7 @@ TST_NOFILE	=				\
 		remap_dead_pid			\
 		remap_dead_pid_root			\
 		aio00				\
+		aio01				\
 		fd				\
 		apparmor				\
 		seccomp_strict			\
